--- a/src/components/tooltip/tooltip.module.scss
+++ b/src/components/tooltip/tooltip.module.scss
@@ -1,5 +1,5 @@
-@import '../../../scss/mixins';
-@import '../../../scss/variables';
+@import "../../scss/mixins";
+@import '../../scss/variables';
 
 .tooltip {
   border-left-style: solid;
